Aha, accomplished a refactor again, mainly use event-delagation and add some comments to promote readability (Also make code looks beauty, although code is for human to see & understand). By using dev-tools's breakpoints fix some bugs (find out it's more powerful than console.log) , but still leave a showWhetherDone's bug. Plan to take a break and fix it.

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -46,9 +46,6 @@ h2 {
 	/* color: #0D8; */
 }
 
-.inner {
-	float: right;
-}
 .main-nav .inner .nav-item{
 	display: inline-block;
 	vertical-align: top;
@@ -61,7 +58,8 @@ h2 {
   margin-right: 56rem;
 }
 .main-nav .inner .subscribe {
-  margin-right: 16rem;
+	margin-right: 15rem;
+	float: right;
 }
 
 .page-title {
